discord.com added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <ul>
         <li>
-          <a href="#">Me adicione no Discord: caroliszz</a>
+          <a href="https://discord.com">Me adicione no Discord: caroliszz</a>
         </li>
         <li>
           <a href="https://linkedin.com/in/cosstacarolina">Conecte-se comigo no Linkedin!</a>
