atualizar redes sociais

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <ul>
         <li>
-          <a href="https://discord.com">Me adicione no Discord: caroliszz</a>
+          <a href="https://discord.com">Me adicione no Discord: awngls</a>
         </li>
         <li>
           <a href="https://linkedin.com/in/cosstacarolina">Conecte-se comigo no Linkedin!</a>
@@ -49,7 +49,7 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://x.com/coelhxs" target=_blank">
+        <a href="https://x.com/awngls" target=_blank">
           <ion-icon name="logo-twitter"></ion-icon>
         </a>
       </div>
